--- a/ereuse_devicehub/templates/inventory/unbinding.html
+++ b/ereuse_devicehub/templates/inventory/unbinding.html
@@ -34,72 +34,72 @@
                           <tr>
                               <th scope="row">Manufacturer:</th>
                               <td class="table-success">{{ placeholder.binding.manufacturer or '' }}</td>
-                              <td class="table-danger text-right">{{ placeholder.device.manufacturer or '' }}</td>
+                              <td class="table-warning text-right">{{ placeholder.device.manufacturer or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Model:</th>
                               <td class="table-success">{{ placeholder.binding.model or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.model or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.model or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Serial Number:</th>
                               <td class="table-success">{{ placeholder.binding.serial_number or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.serial_number or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.serial_number or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Brand:</th>
                               <td class="table-success">{{ placeholder.binding.brand or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.brand or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.brand or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Sku:</th>
                               <td class="table-success">{{ placeholder.binding.sku or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.sku or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.sku or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Generation:</th>
                               <td class="table-success">{{ placeholder.binding.generation or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.generation or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.generation or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Version:</th>
                               <td class="table-success">{{ placeholder.binding.version or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.version or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.version or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Weight:</th>
                               <td class="table-success">{{ placeholder.binding.weight or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.weight or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.weight or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Width:</th>
                               <td class="table-success">{{ placeholder.binding.width or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.width or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.width or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Height:</th>
                               <td class="table-success">{{ placeholder.binding.height or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.height or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.height or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Depth:</th>
                               <td class="table-success">{{ placeholder.binding.depth or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.depth or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.depth or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Color:</th>
                               <td class="table-success">{{ placeholder.binding.color or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.color or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.color or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Production date:</th>
                               <td class="table-success">{{ placeholder.binding.production_date or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.production_date or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.production_date or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Variant:</th>
                               <td class="table-success">{{ placeholder.binding.variant or '' }}</td>
-                              <td class="table-danger">{{ placeholder.device.variant or '' }}</td>
+                              <td class="table-warning">{{ placeholder.device.variant or '' }}</td>
                           </tr>
                       </tbody>
                   </table>
@@ -119,7 +119,7 @@
                           <tr>
                               <td class="table-success">
                               </td>
-                              <td class="table-danger text-right">
+                              <td class="table-warning text-right">
                                   {{ placeholder.components  or ''}}
                               </td>
                           </tr>
@@ -131,6 +131,9 @@
 
                   {% if placeholder.device.manual_actions or placeholder.binding.manual_actions %}
                   <h2>Actions</h2>
+                  <p>
+                      The actions will become real device and will no longer be in the abstract
+                  </p>
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
@@ -157,6 +160,9 @@
 
                   {% if placeholder.device.tags %}
                   <h2>Tags</h2>
+                  <p>
+                      The tags will become real device and will no longer be in the abstract
+                  </p>
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
