mv unique identifiers buttons to device details

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -256,6 +256,14 @@
           </ul>
     </li><!-- End Temporal Lots Nav -->
 
+    <li class="nav-heading">Unique Identifiers (Tags)</li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="{{ url_for('labels.label_list') }}">
+        <i class="bi bi-tag"></i><span>UI Management</span>
+      </a>
+    </li><!-- End Unique Identifiers -->
+
   </ul>
 
 </aside><!-- End Sidebar-->
