--- a/ereuse_devicehub/templates/inventory/addDevicestag.html
+++ b/ereuse_devicehub/templates/inventory/addDevicestag.html
@@ -7,16 +7,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.tag_devices_add') }}" method="post">
-      {{ form_tag_device.csrf_token }}
+      <form action="{{ url_for('inventory.tag_devices_add', dhid=device.devicehub_id) }}" method="post">
         <div class="modal-body">
           Please write a name of a unique identifier
-          <select class="form-control selectpicker" id="selectTag" name="tag" data-live-search="true">
-            {% for tag in tags %}
-            <option value="{{ tag.id }}">{{ tag.id }}</option>
-            {% endfor %}
-          </select>
-          <input class="devicesList" type="hidden" name="device" />
+          {% for f in form_tag_device %}
+          {{ f }}
+          {% endfor %}
           <p class="text-danger pol">
               You need select first one device and only one for add this in a unique identifier
           </p>
