split new device in a parth real and other abstract

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -291,19 +291,9 @@
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
-                    New Devices
+                    New Devices Real
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
-                  <li>
-                    {% if lot %}
-                    <a href="{{ url_for('inventory.lot_upload_snapshot', lot_id=lot.id) }}" class="dropdown-item">
-                    {% else %}
-                    <a href="{{ url_for('inventory.upload_snapshot') }}" class="dropdown-item">
-                    {% endif %}
-                      <i class="bi bi-upload"></i>
-                      Upload Snapshot files
-                    </a>
-                  </li>
                   <li>
                     {% if lot %}
                     <a href="{{ url_for('inventory.lot_upload_placeholder', lot_id=lot.id) }}" class="dropdown-item">
@@ -322,6 +312,25 @@
                     {% endif %}
                       <i class="bi bi-plus"></i>
                       Create a new Placeholder
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="btn-group dropdown m-1" uib-dropdown="">
+                <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-laptop"></i>
+                    New Devices Abstract
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
+                  <li>
+                    {% if lot %}
+                    <a href="{{ url_for('inventory.lot_upload_snapshot', lot_id=lot.id) }}" class="dropdown-item">
+                    {% else %}
+                    <a href="{{ url_for('inventory.upload_snapshot') }}" class="dropdown-item">
+                    {% endif %}
+                      <i class="bi bi-upload"></i>
+                      Upload Snapshot files
                     </a>
                   </li>
                 </ul>
