--- a/ereuse_devicehub/templates/inventory/search.html
+++ b/ereuse_devicehub/templates/inventory/search.html
@@ -201,17 +201,17 @@
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
-                    New Device
+                    New Device Real
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
                   <li>
                     {% if lot %}
-                    <a href="{{ url_for('inventory.lot_upload_snapshot', lot_id=lot.id) }}" class="dropdown-item">
+                    <a href="{{ url_for('inventory.lot_upload_placeholder', lot_id=lot.id) }}" class="dropdown-item">
                     {% else %}
-                    <a href="{{ url_for('inventory.upload_snapshot') }}" class="dropdown-item">
+                    <a href="{{ url_for('inventory.upload_placeholder') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-upload"></i>
-                      Upload a new Snapshot
+                      Upload Placeholder Spreadsheet
                     </a>
                   </li>
                   <li>
@@ -221,7 +221,26 @@
                     <a href="{{ url_for('inventory.device_add') }}" class="dropdown-item">
                     {% endif %}
                       <i class="bi bi-plus"></i>
-                      Create a new Device
+                      Create a new Placeholder
+                    </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="btn-group dropdown m-1" uib-dropdown="">
+                <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-laptop"></i>
+                    New Device Abstract
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
+                  <li>
+                    {% if lot %}
+                    <a href="{{ url_for('inventory.lot_upload_snapshot', lot_id=lot.id) }}" class="dropdown-item">
+                    {% else %}
+                    <a href="{{ url_for('inventory.upload_snapshot') }}" class="dropdown-item">
+                    {% endif %}
+                      <i class="bi bi-upload"></i>
+                      Upload Snapshot files
                     </a>
                   </li>
                 </ul>
