--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -44,19 +44,17 @@
 
           <div class="pt-6 pb-2">
             <h5 class="card-title text-center pb-0 fs-4">Workbench 2022</h5>
-            {% if iso %}
             <div class="row pt-3">
               <div class="col-5">
-                <a href="/static/iso/demo/{{ iso }}" class="btn btn-primary">{{ iso }}</a>
+                <a href="{{ iso.demo.url }}/{{ iso.demo.iso }}" class="btn btn-primary">{{ iso.demo.iso }}</a>
               </div>
               <div class="col">
                 <p class="small">
-                  Download Checksum: <a class="help" href="/static/iso/demo/SHA512SUMS">SHA512SUMS</a> |
+                  Download Checksum: <a class="help" href="{{ iso.demo.url }}/SHA512SUMS">SHA512SUMS</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a></p>
                 </p>
               </div>
             </div>
-            {% endif %}
           </div>
         </div>
 
@@ -115,14 +113,14 @@
             <br />
             <div class="row">
               <div class="col-5">
-                <a href="/static/iso/{{ d }}/{{ v }}" class="btn btn-primary" style="width: 200px;">Get ISO file</a>
+                <a href="{{ v.url }}/{{ v.iso }}" class="btn btn-primary" style="width: 200px;">Get ISO file</a>
               </div>
               <div class="col">
                 <p class="small">
-                  {{ v }}
+                  {{ v.iso }}
                 </p>
                 <p class="small">
-                  Download Checksum: <a class="help" href="/static/iso/{{ d }}/SHA512SUMS">SHA512SUMS</a> |
+                  Download Checksum: <a class="help" href="{{ v.url }}/SHA512SUMS">SHA512SUMS</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a></p>
                 </p>
               </div>
