--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -50,7 +50,7 @@
               </div>
               <div class="col">
                 <p class="small">
-                  Download Checksum: <a class="help" href="{{ iso.demo.url }}SHA512SUMS">SHA512SUMS</a> |
+                  Download Checksum: <a class="help" href="{{ iso.demo.url }}SHA512SUM">SHA512SUM</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a></p>
                 </p>
               </div>
@@ -120,7 +120,7 @@
                   {{ v.iso }}
                 </p>
                 <p class="small">
-                  Download Checksum: <a class="help" href="{{ v.url }}SHA512SUMS">SHA512SUMS</a> |
+                  Download Checksum: <a class="help" href="{{ v.url }}SHA512SUM">SHA512SUM</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a></p>
                 </p>
               </div>
