change only_unassigned for one specific url

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -160,7 +160,7 @@
     <li class="nav-heading">Devices</li>
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="{{ url_for('inventory.devicelist') }}?only_unassigned=false">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.alldevicelist') }}">
         <i class="bi bi-laptop"></i>
         <span>All devices</span>
       </a>
