--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -7,10 +7,10 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{ url_for('inventory.devicelist')}}">Inventory</a></li>
       {% if not lot %}
-        {% if unassigned_devices %}
-          <li class="breadcrumb-item active">Unassigned</li>
-        {% else %}
+        {% if all_devices %}
           <li class="breadcrumb-item active">All devices</li>
+        {% else %}
+          <li class="breadcrumb-item active">Unassigned</li>
         {% endif %}
       {% elif lot.is_temporary %}
       <li class="breadcrumb-item active">Temporary Lot</li>
@@ -247,7 +247,7 @@
                     </a>
                   </li>
                   <li>
-                    {% if unassigned_devices %}
+                    {% if not all_devices %}
                     <span class="dropdown-item" style="color: #999ea4;">
                       <i class="bi bi-file-spreadsheet"></i>
                       Devices Lots Spreadsheet
