--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -114,6 +114,11 @@
               </div>
 
               <div class="row">
+                <div class="col-lg-3 col-md-4 label">Part Number</div>
+                <div class="col-lg-9 col-md-8">{{ placeholder.device.part_number or ''}}</div>
+              </div>
+
+              <div class="row">
                 <div class="col-lg-3 col-md-4 label">Serial Number</div>
                 <div class="col-lg-9 col-md-8">{{ placeholder.device.serial_number or ''}}</div>
               </div>
